--- a/GuessGame.html
+++ b/GuessGame.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <title>Guess Game</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="Gamerule.js"></script>
 </head>
 <body>
+    <header>
+        <h1>Este é o jogo da advinhação</h1>
+        <h2>Digite um número entre 1 e 100 para tentar a sorte, você tem 10 chances de acertar e a cada chance uma dica será dada, ao acertar a mensagem "Você acertou!" será exibida, Boa sorte!</h2>
+    </header>
     
 </body>
 </html>
