--- a/GuessGame.html
+++ b/GuessGame.html
@@ -12,6 +12,12 @@
         <h1>Este é o jogo da advinhação</h1>
         <h2>Digite um número entre 1 e 100 para tentar a sorte, você tem 10 chances de acertar e a cada chance uma dica será dada, ao acertar a mensagem "Você acertou!" será exibida, Boa sorte!</h2>
     </header>
-    
+    <main>
+        <label id="chute">Digite aqui seu número:</label>
+        <input type="text" name="chute" id="num">
+        <button id="but" onclick="guess">Chutar</button>
+        <p id="dica"></p>
+        <p id="chance"></p>
+    </main>
 </body>
 </html>
