inicio da função principal

--- a/GuessGame.html
+++ b/GuessGame.html
@@ -15,9 +15,9 @@
     <main>
         <label id="chute">Digite aqui seu número:</label>
         <input type="text" name="chute" id="num">
-        <button id="but" onclick="guess">Chutar</button>
-        <p id="dica"></p>
-        <p id="chance"></p>
+        <button id="but" onclick="chute()">Chutar</button>
+        <p id="dica"> </p>
+        <p id="chance">Você tem </p>
     </main>
 </body>
 </html>
